[package]
name = "leptonica-sys"
version = "0.3.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
links = "lept"
build = "build.rs"
description = "FFI bindings for Leptonica"
license = "MIT"
repository = "https://github.com/ccouzens/leptonica-sys"
keywords = ["leptonica"]
categories = ["api-bindings", "multimedia::images"]

[build-dependencies]
bindgen = "0.52"
