[package]
name = "leptonica-sys"
version = "0.3.5"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
links = "lept"
build = "build.rs"
description = "FFI bindings for Leptonica"
license = "MIT"
repository = "https://github.com/ccouzens/leptonica-sys"
keywords = ["leptonica"]
categories = ["api-bindings", "multimedia::images"]

[build-dependencies]
bindgen = "0.56"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.8"

[target.'cfg(target_os="macos")'.build-dependencies]
pkg-config = "0.3.19"

[target.'cfg(target_os="linux")'.build-dependencies]
pkg-config = "0.3.19"